--- a/relatorio/relatorio.Rmd
+++ b/relatorio/relatorio.Rmd
@@ -24,6 +24,13 @@ output:
 
 Obs: Escolher apenas um dos painés de figura acima! Não utilizar os dois!
 
+Os valores de correlação de Spearman para as associações são:
+
+- DENV1: rho = 0.5262571, p = <0.001
+- DENV2: rho = 0.2761045, p = 0.0359
+- DENV3: rho = 0.5174988, p = <0.001
+- DENV4: rho = 0.5062238, p = <0.001
+
 ### Cinética
 
 #### Decaimento dos títulos de anticorpos neutralizantes
