Fechando associação com TT

--- a/relatorio/relatorio.Rmd
+++ b/relatorio/relatorio.Rmd
@@ -18,6 +18,8 @@ output:
 
 ### Associação
 
+#### Correlação
+
 ![**Figura xx** - Associação entre títulos de anticorpos neutralizantes de soro materno e sangue de cordão (linear)](../figuras/assoc-linear-all.png)
 
 ![**Figura xx** - Associação entre títulos de anticorpos neutralizantes de soro materno e sangue de cordão (não-linear)](../figuras/assoc-nlinear-all.png)
@@ -30,6 +32,17 @@ Os valores de correlação de Spearman para as associações são:
 - DENV2: rho = 0.2761045, p = 0.0359
 - DENV3: rho = 0.5174988, p = <0.001
 - DENV4: rho = 0.5062238, p = <0.001
+
+#### Taxa de Transferência
+
+|   &nbsp;    |  N  |  MG Sangue Cordão  |  MG Soro Materno  |  TT (%)  |  TT IC 95%  |
+|:-----------:|:---:|:------------------:|:-----------------:|:--------:|:-----------:|
+|  **DENV1**  | 58  |        1040        |       1010        |   103    |  [95, 112]  |
+|  **DENV2**  | 58  |       981.8        |        926        |   106    |  [88, 128]  |
+|  **DENV3**  | 58  |       823.6        |       830.9       |    99    |  [81, 122]  |
+|  **DENV4**  | 58  |        640         |        452        |   142    |  [94, 213]  |
+
+Table: **Tabela xx** MG = Média geométrica; TT = Taxa de transferência; IC = Intervalo de confiança de 95% em torno da média.
 
 ### Cinética
 
