--- a/relatorio/relatorio.Rmd
+++ b/relatorio/relatorio.Rmd
@@ -26,12 +26,12 @@ output:
 
 Obs: Escolher apenas um dos painés de figura acima! Não utilizar os dois!
 
-Os valores de correlação de Spearman para as associações são:
+Os valores de correlação de Pearson para as associações são:
 
-- DENV1: rho = 0.5262571, p = <0.001
-- DENV2: rho = 0.2761045, p = 0.0359
-- DENV3: rho = 0.5174988, p = <0.001
-- DENV4: rho = 0.5062238, p = <0.001
+- DENV1: r = 0.8308448, p = <0.001
+- DENV2: r = 0.4262882, p = <0.001
+- DENV3: r = 0.5217896, p = <0.001
+- DENV4: r = 0.2314973, p = 0.0804
 
 #### Taxa de Transferência
 
