gráficos de ajuste não-linear comentados

--- a/relatorio/relatorio.Rmd
+++ b/relatorio/relatorio.Rmd
@@ -22,9 +22,9 @@ output:
 
 ![**Figura xx** - Associação entre títulos de anticorpos neutralizantes de soro materno e sangue de cordão (linear)](../figuras/assoc-linear-all.png)
 
-![**Figura xx** - Associação entre títulos de anticorpos neutralizantes de soro materno e sangue de cordão (não-linear)](../figuras/assoc-nlinear-all.png)
+<!-- ![**Figura xx** - Associação entre títulos de anticorpos neutralizantes de soro materno e sangue de cordão (não-linear)](../figuras/assoc-nlinear-all.png) -->
 
-Obs: Escolher apenas um dos painés de figura acima! Não utilizar os dois!
+<!-- Obs: Escolher apenas um dos painés de figura acima! Não utilizar os dois! -->
 
 Os valores de correlação de Pearson para as associações são:
 
