--- a/relatorio/relatorio.Rmd
+++ b/relatorio/relatorio.Rmd
@@ -56,10 +56,10 @@ Table: **Tabela xx** MG = Média geométrica; TT = Taxa de transferência; IC = 
 
 #### Médias por idade
 
-pander(cbind(BB1[, .(N = .N, Media.DENV1 = geomean(Titulo)), by = Idade][order(Idade)],
-             BB2[, .(Media.DENV2 = geomean(Titulo)), by = Idade][order(Idade)],
-             BB3[, .(Media.DENV3 = geomean(Titulo)), by = Idade][order(Idade)],
-             BB4[, .(Media.DENV4 = geomean(Titulo)), by = Idade][order(Idade)])[,c(1:3,5,7,9)])
+<!-- pander(cbind(BB1[, .(N = .N, Media.DENV1 = geomean(Titulo)), by = Idade][order(Idade)], -->
+<!--              BB2[, .(Media.DENV2 = geomean(Titulo)), by = Idade][order(Idade)], -->
+<!--              BB3[, .(Media.DENV3 = geomean(Titulo)), by = Idade][order(Idade)], -->
+<!--              BB4[, .(Media.DENV4 = geomean(Titulo)), by = Idade][order(Idade)])[,c(1:3,5,7,9)]) -->
 
 
 |  Idade  |  N  |  Media.DENV1  |  Media.DENV2  |  Media.DENV3  |  Media.DENV4  |
