--- a/relatorio/relatorio.Rmd
+++ b/relatorio/relatorio.Rmd
@@ -4,6 +4,7 @@ author: "Felipe Figueiredo"
 date: "June 18, 2017"
 output:
   html_document:
+    keep_md: yes
     number_sections: yes
     toc: yes
   word_document:
