Declarada a hipótese nula dos ICs de proporções. Closes #5.

--- a/relatorio/relatorio.Rmd
+++ b/relatorio/relatorio.Rmd
@@ -16,7 +16,8 @@ output:
 ## Análise estatística
 
 Todos os tratamentos e as análises dos dados foram realizados no software estatístico R, versão `r getRversion()` (https://www.R-project.org).
-Os intervalos de confiança exatos das proporções foram calculados usando-se o pacote `exactci` (versão `r packageVersion("exactci")`), e a regressão de Deming foi calculada com o pacote `MethComp` (versão `r packageVersion("MethComp")`).
+A regressão de Deming foi calculada com o pacote `MethComp` (versão `r packageVersion("MethComp")`).
+Os intervalos de confiança exatos das proporções foram calculados usando-se o pacote `exactci` (versão `r packageVersion("exactci")`), contra a hipótese nula de que a proporção era igual a 50%.
 
 Em todas as análises foi utilizado o nível de significância de 5%.
 
