--- a/relatorio/relatorio.Rmd
+++ b/relatorio/relatorio.Rmd
@@ -15,11 +15,6 @@ output:
 
 ## Análise estatística
 
-Todos os tratamentos e as análises dos dados foram realizados no software estatístico R, versão `r getRversion()` (https://www.R-project.org).
-A regressão de Deming foi calculada com o pacote `MethComp` (versão `r packageVersion("MethComp")`).
-Os intervalos de confiança exatos das proporções foram calculados usando-se o pacote `exactci` (versão `r packageVersion("exactci")`), contra a hipótese nula de que a proporção era igual a 50%.
-
-Em todas as análises foi utilizado o nível de significância de 5%.
 
 ### Tratamento dos dados
 
@@ -27,21 +22,28 @@ Os títulos com valores abaixo da primeira diluição (<10) foram substituídos 
 Os títulos com valores acima da última diluição (>1250) foram substituídos por 2500.
 Os títulos foram comparados usando o teste t de Student pareado, após transformação para escala logarítmica (base 10).
 
-### Cinética de Dengue
-
-A cinética de dengue foi estimada usando regressão linear simples entre os títulos de anticorpos neutralizantes e a idade dos bebês.
-O tempo de sororreversão foi calculado como o ponto de interseção entre os valores de referência 50 e o limite de detecção da primeira diluição (título 10).
-
 ### Associação entre soro materno e sangue de cordão
 
 A o grau e direção da associação entre dados numéricos foi analisada com o coeficiente de correlação de Pearson, após transformação pelo logaritmo.
 
 A tendência de associação foi observada usando a regressão de Deming, que é capaz de avaliar simultaneamente as variabilidades experimentais de ambos os dados.
 
-#### Taxa de transferência
-
 A taxa de transferência foi definida como (TT) = (valor mensurado na amostra cordão/ valor mensurado na amostra materna)*100.
 Para avaliar a TT média em cada sorotipo a média geométrica dos títulos foi utilizada. A TT média foi determinada como a razão entre as médias geométricas: (TTmédia) = (média geométrica na amostra cordão/valor mensurado na amostra materna).
+
+### Cinética de Dengue
+
+A cinética de dengue foi estimada usando regressão linear simples entre os títulos de anticorpos neutralizantes e a idade dos bebês.
+O tempo de sororreversão foi calculado como o ponto de interseção entre os valores de referência 50 e o limite de detecção da primeira diluição (título 10).
+
+### Software
+
+Todos os tratamentos e as análises dos dados foram realizados no software estatístico R, versão `r getRversion()` (https://www.R-project.org).
+A regressão de Deming foi calculada com o pacote `MethComp` (versão `r packageVersion("MethComp")`).
+Os intervalos de confiança exatos das proporções foram calculados usando-se o pacote `exactci` (versão `r packageVersion("exactci")`), contra a hipótese nula de que a proporção era igual a 50%.
+
+Em todas as análises foi utilizado o nível de significância de 5%.
+
 
 # Resultados
 
